freest/test/prog/invalid/scoping/MultipleDeclsData/MultipleDeclsData.fst
module MultipleDeclsData where

data Foo = Bar Int | Baz

data Foo = Far Int | Faz